--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>My website</title>
     <meta author="Colin Young" />
-    <link href="stylesheet.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
   </head>
   <nav>
     <a href="#aboutme">About Me</a> | <a href="#currpos">Current Position</a> |
-    <a href="#goals">Goals</a> |
     <a href="#contact">Contact</a>
   </nav>
   <header>
@@ -107,10 +106,6 @@
         <hr />
       </section>
       <section>
-        <h2 id="goals">Goals</h2>
-        <hr />
-      </section>
-      <section>
         <h2 id="contact">Contact</h2>
         <strong
           >If you'd like my complete resume, feel free to reach out to me at
@@ -202,8 +197,43 @@
         </form>
         <hr />
       </section>
-      <button onClick="window.location.reload();">Refresh Page</button>
+
+      <h2>Modern Art</h2>
+      <canvas id="canvas" width="100" height="100"></canvas>
+      <svg width="100" height="100">
+        <circle
+          cx="50"
+          cy="50"
+          r="40"
+          stroke="black"
+          stroke-width="4"
+          fill="blue"
+        ></circle>
+      </svg>
+      <script>
+        var c = document.getElementById("canvas");
+        var context = c.getContext("2d");
+        context.moveTo(0, 0);
+        context.lineTo(100, 100);
+        context.stroke();
+      </script>
+      <hr />
     </main>
+
+    <p>Click to show some hidden content at the bottom of the page</p>
+    <button onclick="showContent()">Show hidden content</button>
+
+    <template>
+      <h2>Hidden content!</h2>
+    </template>
+
+    <script>
+      function showContent() {
+        var temp = document.getElementsByTagName("template")[0];
+        var clon = temp.content.cloneNode(true);
+        document.body.appendChild(clon);
+      }
+    </script>
   </body>
   <footer>
     <p>Author: Colin Young</p>
