--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <h3>My Favorite Artists and Clips</h3>
         <ol>
           <li>Braxton Cook</li>
-          <audio src="media/Ooooo.mp3"></audio>
+          <audio controls src="media/Ooooo.mp3"></audio>
           <li>Snarky Puppy</li>
-          <audio src="media/xavi.mp3"></audio>
+          <audio controls src="media/xavi.mp3"></audio>
           <li>Chris Potter</li>
-          <audio src="media/rumples.mp3"></audio>
+          <audio controls src="media/rumples.mp3"></audio>
           <li>Christian Scott</li>
-          <audio src="media/sunrise.mp3"></audio>
+          <audio controls src="media/sunrise.mp3"></audio>
           <li>Baptiste Herbin</li>
-          <audio src="media/parker.mp3"></audio>
+          <audio controls src="media/parker.mp3"></audio>
         </ol>
-        <video src="media/donnalee.mp4"></video>
+        <video controls src="media/donnalee.mp4"></video>
         <hr />
       </section>
       <section>
