--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My website</title>
-    <meta author="Colin Young" />
+    <meta charset="UTF-8" />
     <link href="main.css" rel="stylesheet" />
   </head>
   <nav>
@@ -40,20 +40,19 @@
         was based off of:
         <details>
           <summary>Markdown Website</summary>
-          <iframe src="https://cyoung02.github.io/" width="50%"></iframe>
+          <iframe src="https://cyoung02.github.io/"></iframe>
         </details>
         <h3>My Favorite Artists and Clips</h3>
         <ol>
-          <li>Braxton Cook</li>
-          <audio controls src="media/Ooooo.mp3"></audio>
-          <li>Snarky Puppy</li>
-          <audio controls src="media/xavi.mp3"></audio>
-          <li>Chris Potter</li>
-          <audio controls src="media/rumples.mp3"></audio>
-          <li>Christian Scott</li>
-          <audio controls src="media/sunrise.mp3"></audio>
-          <li>Baptiste Herbin</li>
-          <audio controls src="media/parker.mp3"></audio>
+          <li>Braxton Cook <audio controls src="media/Ooooo.mp3"></audio></li>
+          <li>Snarky Puppy <audio controls src="media/xavi.mp3"></audio></li>
+          <li>Chris Potter <audio controls src="media/rumples.mp3"></audio></li>
+          <li>
+            Christian Scott <audio controls src="media/sunrise.mp3"></audio>
+          </li>
+          <li>
+            Baptiste Herbin <audio controls src="media/parker.mp3"></audio>
+          </li>
         </ol>
         <video controls src="media/donnalee.mp4"></video>
         <hr />
@@ -63,15 +62,15 @@
         <div>
           <h3>UCSD Moshiri Lab</h3>
           <em>Undergraduate Researcher</em>
+          <aside>
+            <p>
+              The Moshiri Lab is a research lab run by professor Niema Moshiri
+              at UCSD. <br />
+              We focus on computational biology, particularly in the areas of
+              HIV phylogenetics and molecular epidemiology.
+            </p>
+          </aside>
           <ul>
-            <aside>
-              <p>
-                The Moshiri Lab is a research lab run by professor Niema Moshiri
-                at UCSD. <br />
-                We focus on computational biology, particularly in the areas of
-                HIV phylogenetics and molecular epidemiology.
-              </p>
-            </aside>
             <li>
               First author on 2020 preprint
               <a href="https://doi.org/10.1101/2020.11.24.396820"
@@ -112,20 +111,16 @@
           young.colin86@gmail.com</strong
         >
         <code>
-          <pre>
-            if (my_page.is_seen()) {
-              return with_job_offer("please");
-            }
-          </pre>
+          if (my_page.is_seen()) { return with_job_offer("please"); }
         </code>
-        <form action="">
+        <form>
           <div>
             <label for="name"> Name:</label>
-            <input type="text" name="name" />
+            <input type="text" id="name" />
           </div>
           <div>
             <label for="gender">Gender:</label>
-            <select name="gender">
+            <select id="gender">
               <optgroup label="Binary">
                 <option>Male</option>
                 <option>Female</option>
@@ -139,28 +134,28 @@
           </div>
           <div>
             <label for="birthday">Birthday:</label>
-            <input type="date" name="birthday" />
+            <input type="date" id="birthday" />
           </div>
           <div>
             <label for="website">Personal Website:</label>
-            <input type="url" name="website" />
+            <input type="url" id="website" />
           </div>
           <div>
             <label for="phone">Phone Number:</label>
-            <input type="tel" name="phone" />
+            <input type="tel" id="phone" />
           </div>
           <div>
             <label for="email"> Email: </label>
-            <input type="email" name="email" />
+            <input type="email" id="email" />
           </div>
 
           <div>
             <label for="favcolor"> Favorite Color: </label>
-            <input type="color" name="favcolor" />
+            <input type="color" id="favcolor" />
           </div>
           <div>
             <label for="favnumber"> Favorite Number: </label>
-            <input type="number" name="favnumber" />
+            <input type="number" id="favnumber" />
           </div>
           <div>
             <label for="artist-choice">Choose your favorite artist:</label>
@@ -186,7 +181,7 @@
           </div>
           <div>
             <label for="message"> Message:</label>
-            <textarea name="message" cols="30" rows="10"></textarea>
+            <textarea id="message" cols="30" rows="10"></textarea>
           </div>
           <div>
             <input type="submit" value="Send!" />
