--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" />
     <link href="main.css" rel="stylesheet" />
   </head>
-  <nav>
-    <a href="#aboutme">About Me</a> | <a href="#currpos">Current Position</a> |
-    <a href="#contact">Contact</a>
-  </nav>
-  <header>
-    <h1>Colin Young</h1>
-  </header>
   <body>
+    <nav>
+      <a href="#aboutme">About Me</a> |
+      <a href="#currpos">Current Position</a> |
+      <a href="#contact">Contact</a>
+    </nav>
+    <header>
+      <h1>Colin Young</h1>
+    </header>
     <main>
       <figure>
         <picture>
