added internal css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      aside {
+        text-align: center;
+      }
+    </style>
     <title>My website</title>
     <meta charset="UTF-8" />
     <link href="main.css" rel="stylesheet" />
